@@ -14,6 +14,8 @@ lintian-brush (0.131) UNRELEASED; urgency=medium
 
   [ Jelmer Vernooĳ ]
   * Rely on check_upstream_metadata to follow redirects. Closes: #948637
+  * homepage-field-uses-insecure-uri: Don't update Homepage field if
+    https page redirects back to http page. Closes: #977593
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Tue, 06 Sep 2022 19:53:17 +0100
 
